# franka-vr-teleop

./: .gitignore  README.md
franka_vr_teleop/: CMakeLists.txt  package.xml
franka_vr_teleop/launch/: quest_wrist_tracker_cpp.launch.py
franka_vr_teleop/src/: wrist_pose_control.cpp
robot_client/include/: weighted_ik.h
robot_client/src/: franka_vr_control_client.cpp
scripts/: test_udp_server.py  udp_listener.py
servo_fer_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
servo_fer_moveit_config/config/: fer_real_controllers.yaml  joint_limits.yaml  kinematics.yaml  moveit.rviz  moveit_controllers.yaml  moveit_cpp.yaml  ompl_planning.yaml  pilz_cartesian_limits.yaml  ros2_controllers.yaml  servo_config.yaml
servo_fer_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit.launch.py  moveit_rviz.launch.py  real.launch.py  rsp.launch.py  servo.launch.py  spawn_controllers.launch.py
servo_fer_moveit_config/srdf/: fer_arm.srdf.xacro  fer_arm.xacro  fer_arm_hand.xacro  group_definition.xacro  hand.xacro
servo_fer_moveit_config/test/: srdf_tests.py
servo_fer_moveit_config/urdf/: servo_fer_description.xacro
src/franka_vr_teleop/: package.xml  setup.py
src/franka_vr_teleop/franka_vr_teleop/: vr_to_robot_converter.py
src/franka_vr_teleop/launch/: vr_control.launch.py
vr_robot_client/: CMakeLists.txt  vr_teleop_client.py
vr_robot_client/include/: panda_kinematics.hpp  weighted_ik.h
vr_robot_client/src/: example_weighted_ik.cpp  franka_vr_control_client.cpp  panda_kinematics.cpp  weighted_ik.cpp
